peac_dev/force-app/main/default/objects/Asset__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>