peac_dev/force-app/main/default/objects/Asset__c/fields/Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage__c</fullName>
    <formula>IF(Passenger_Capacity__c &gt; 35, 5000000, IF(Passenger_Capacity__c &gt;= 1 &amp;&amp; Passenger_Capacity__c &lt;= 34, 1500000, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>