peac_dev/force-app/main/default/objects/Asset__c/fields/Insurance_Coverage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage_Amount__c</fullName>
    <description>The minimum amount of insurance coverage.</description>
    <label>Insurance Coverage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>