peac_dev/force-app/main/default/objects/Asset__c/fields/Is_Titled__c.field-meta.xml
<CustomField>
    <fullName>Is_Titled__c</fullName>
    <formula>CONTAINS (TEXT(Equipment_Code__c), &apos;Titled&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Titled?</label>
    <type>Checkbox</type>
</CustomField>