peac_dev/force-app/main/default/objects/Asset__c/fields/Manager_Residual__c.field-meta.xml
<CustomField>
    <fullName>Manager_Residual__c</fullName>
    <label>Manager Residual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>