peac_dev/force-app/main/default/objects/Asset__c/fields/Mandatory_Fields_Include__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Fields_Include__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mandatory Fields Include:</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>