peac_dev/force-app/main/default/objects/Asset__c/fields/Manufacturer1__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer1__c</fullName>
    <label>Manufacturer1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>3D Systems</fullName>
            </value>
            <value>
                <fullName>Abatix</fullName>
            </value>
            <value>
                <fullName>Absen</fullName>
            </value>
            <value>
                <fullName>AccuTemp</fullName>
            </value>
            <value>
                <fullName>Ace Mart</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Acroaire</fullName>
            </value>
            <value>
                <fullName>ADT</fullName>
            </value>
            <value>
                <fullName>Adtran</fullName>
            </value>
            <value>
                <fullName>Advance Tabco</fullName>
            </value>
            <value>
                <fullName>Aerolase</fullName>
            </value>
            <value>
                <fullName>Agfa Healthcare</fullName>
            </value>
            <value>
                <fullName>AIS</fullName>
            </value>
            <value>
                <fullName>Alkota</fullName>
            </value>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>Allmeds</fullName>
            </value>
            <value>
                <fullName>Allsteel</fullName>
            </value>
            <value>
                <fullName>Allworx</fullName>
            </value>
            <value>
                <fullName>Aloka</fullName>
            </value>
            <value>
                <fullName>Alpine</fullName>
            </value>
            <value>
                <fullName>Altium</fullName>
            </value>
            <value>
                <fullName>Amana</fullName>
            </value>
            <value>
                <fullName>Amann Girrbach</fullName>
            </value>
            <value>
                <fullName>American Dish</fullName>
            </value>
            <value>
                <fullName>American Range</fullName>
            </value>
            <value>
                <fullName>American Standard</fullName>
            </value>
            <value>
                <fullName>Ameristar</fullName>
            </value>
            <value>
                <fullName>Ameritech</fullName>
            </value>
            <value>
                <fullName>AMI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>