peac_dev/force-app/main/default/objects/Asset__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Store Manufacturer name from account where Type is M.</description>
    <label>Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Dealer Account Type should be as Manufacturer</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Manufacturer</value>
        </filterItems>
        <filterItems>
            <field>Account.Dealer_Number__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Asset_Manufacturer</relationshipName>
    <type>Lookup</type>
</CustomField>