peac_dev/force-app/main/default/objects/Asset__c/fields/Manufacturer_Description__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Description__c</fullName>
    <label>Manufacturer Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>3Com</fullName>
            </value>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>Aastra</fullName>
            </value>
            <value>
                <fullName>AccuCut</fullName>
            </value>
            <value>
                <fullName>AccuTemp</fullName>
            </value>
            <value>
                <fullName>Ace Mart</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
            </value>
            <value>
                <fullName>Acroaire</fullName>
            </value>
            <value>
                <fullName>ADT</fullName>
            </value>
            <value>
                <fullName>Adtran</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Advanced Data Systems</fullName>
            </value>
            <value>
                <fullName>Advanced Surveillance</fullName>
            </value>
            <value>
                <fullName>Advance Tabco</fullName>
            </value>
            <value>
                <fullName>AIS</fullName>
            </value>
            <value>
                <fullName>AIT</fullName>
            </value>
            <value>
                <fullName>Alkota</fullName>
            </value>
            <value>
                <fullName>Allied</fullName>
            </value>
            <value>
                <fullName>Allsteel</fullName>
            </value>
            <value>
                <fullName>Allworx</fullName>
            </value>
            <value>
                <fullName>Aloha</fullName>
            </value>
            <value>
                <fullName>Alpine</fullName>
            </value>
            <value>
                <fullName>Altium</fullName>
            </value>
            <value>
                <fullName>Amana</fullName>
            </value>
            <value>
                <fullName>Amann Girrbach</fullName>
            </value>
            <value>
                <fullName>American Dish</fullName>
            </value>
            <value>
                <fullName>American Range</fullName>
            </value>
            <value>
                <fullName>American Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>