peac_dev/force-app/main/default/objects/Asset__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 100,000</fullName>
            </value>
            <value>
                <fullName>100,001 - 250,000</fullName>
            </value>
            <value>
                <fullName>250,001 - 500,000</fullName>
            </value>
            <value>
                <fullName>500,001 - 750,000</fullName>
            </value>
            <value>
                <fullName>750,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>