peac_dev/force-app/main/default/objects/Asset__c/fields/Misc_City_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Misc_City_Tax_Code__c</fullName>
    <label>Misc City Tax Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Codes</valueSetName>
    </valueSet>
</CustomField>