peac_dev/force-app/main/default/objects/Asset__c/fields/Misc_GST__c.field-meta.xml
<CustomField>
    <fullName>Misc_GST__c</fullName>
    <label>Misc GST (Misc City Tax Amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>