peac_dev/force-app/main/default/objects/Asset__c/fields/New_Used__c.field-meta.xml
<CustomField>
    <fullName>New_Used__c</fullName>
    <label>New/Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>