peac_dev/force-app/main/default/objects/Asset__c/fields/Number_of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passengers__c</fullName>
    <label>Number of Passengers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>