peac_dev/force-app/main/default/objects/Asset__c/fields/Number_of_units_used_CTD__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units_used_CTD__c</fullName>
    <label># of units used CTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>