peac_dev/force-app/main/default/objects/Asset__c/fields/of_Service_Units_Made__c.field-meta.xml
<CustomField>
    <fullName>of_Service_Units_Made__c</fullName>
    <label># of Service Units Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>