peac_dev/force-app/main/default/objects/Asset__c/fields/Oper_Depr_LIM__c.field-meta.xml
<CustomField>
    <fullName>Oper_Depr_LIM__c</fullName>
    <label>Oper. Depr. LIM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>