peac_dev/force-app/main/default/objects/Asset__c/fields/Opportunity_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contract_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>