peac_dev/force-app/main/default/objects/Asset__c/fields/Orig_Cost__c.field-meta.xml
<CustomField>
    <fullName>Orig_Cost__c</fullName>
    <label>Orig. Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>