peac_dev/force-app/main/default/objects/Asset__c/fields/Other_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Other_Manufacturer__c</fullName>
    <description>The field is conditionally mandatory on ‘Manufacturer’ selected as ‘Other’.SAL-4968</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>