peac_dev/force-app/main/default/objects/Asset__c/fields/Other_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Other_Vehicle_Make__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Vehicle Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>