peac_dev/force-app/main/default/objects/Asset__c/fields/Owner_Operator__c.field-meta.xml
<CustomField>
    <fullName>Owner_Operator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner/Operator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>