peac_dev/force-app/main/default/objects/Asset__c/fields/Passenger_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Capacity__c</fullName>
    <label>Passenger Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>