peac_dev/force-app/main/default/objects/Asset__c/fields/Prevent_Recursion__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Recursion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Recursion</label>
    <type>Checkbox</type>
</CustomField>