peac_dev/force-app/main/default/objects/Asset__c/fields/Program_Tiborian__c.field-meta.xml
<CustomField>
    <fullName>Program_Tiborian__c</fullName>
    <formula>IF ( INCLUDES(Opportunity__r.Program__c, &apos;Tiborian&apos;), &apos;YES&apos;, &apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Tiborian</label>
    <type>Text</type>
</CustomField>