peac_dev/force-app/main/default/objects/Asset__c/fields/Property_Status__c.field-meta.xml
<CustomField>
    <fullName>Property_Status__c</fullName>
    <label>Property Tax Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>11 - PPTX Admin Fee of $18.00</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 - Not Reportable</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>01 - Lessor Files / Bill Lessee</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>02 - Lessee Files / Do Not Bill</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>03 - Lessor Files / Lessee Financed</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>04 - Honeywell pptx in rental</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>05 - PPTX included in rental</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>07 - PPTX admin fee of $12.00</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>08 - PPTX admin fee of $15.00</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>09 - No admin fee charge</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12 - PPTax Billing (Actual only)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>