peac_dev/force-app/main/default/objects/Asset__c/fields/PTAX_Admin_Fee_CD__c.field-meta.xml
<CustomField>
    <fullName>PTAX_Admin_Fee_CD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PTAX Admin Fee CD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>