peac_dev/force-app/main/default/objects/Asset__c/fields/Purchase_Options__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Options__c</fullName>
    <formula>TEXT(Opportunity__r.Purchase_Options__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Purchase option from deal defaulted to asset</inlineHelpText>
    <label>Purchase Option</label>
    <type>Text</type>
</CustomField>