peac_dev/force-app/main/default/objects/Asset__c/fields/Reading_Dates__c.field-meta.xml
<CustomField>
    <fullName>Reading_Dates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reading Dates</label>
    <type>Date</type>
</CustomField>