peac_dev/force-app/main/default/objects/Asset__c/fields/Reading_Method__c.field-meta.xml
<CustomField>
    <fullName>Reading_Method__c</fullName>
    <label>Reading Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Actual</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Initial</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Estimated</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Default</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Equipment Exchange</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>New Equip Initial</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Final</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Final (2)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>