peac_dev/force-app/main/default/objects/Asset__c/fields/Reading_Units__c.field-meta.xml
<CustomField>
    <fullName>Reading_Units__c</fullName>
    <label>Reading Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>