peac_dev/force-app/main/default/objects/Asset__c/fields/Recalculate_Residual__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Residual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, triggers recalc of residual</inlineHelpText>
    <label>Recalculate Residual</label>
    <type>Checkbox</type>
</CustomField>