peac_dev/force-app/main/default/objects/Asset__c/fields/Recourse_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Amount__c</fullName>
    <label>Recourse Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>