peac_dev/force-app/main/default/objects/Asset__c/fields/Recourse_Code__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Code__c</fullName>
    <label>Recourse Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>RECOURSE</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Additional Collateral</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>LossPool</label>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>Non-Recourse</label>
            </value>
            <value>
                <fullName>P</fullName>
                <isActive>false</isActive>
                <label>Partial Recourse</label>
            </value>
            <value>
                <fullName>R</fullName>
                <isActive>false</isActive>
                <label>R</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>