peac_dev/force-app/main/default/objects/Asset__c/fields/Recourse_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recourse Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>