peac_dev/force-app/main/default/objects/Asset__c/fields/Recourse_Percent__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Percent__c</fullName>
    <label>Recourse Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>