peac_dev/force-app/main/default/objects/Asset__c/fields/Recourse_Term__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Term__c</fullName>
    <label>Recourse Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>