peac_dev/force-app/main/default/objects/Asset__c/fields/Renewal_Option__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Option__c</fullName>
    <label>Renewal Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>No Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>