peac_dev/force-app/main/default/objects/Asset__c/fields/Rental_Amount_fml__c.field-meta.xml
<CustomField>
    <fullName>Rental_Amount_fml__c</fullName>
    <description>moved calculation to formula since there is no longer need to summarize List_Price__c of all of the assets</description>
    <formula>(IF(ISNULL(Opportunity__r.Payment_Amount__c) || ISNULL(Opportunity__r.Equipment_Cost__c), 
 IF(ISNULL(Opportunity__r.X_Rate_Factor__c), 0, Opportunity__r.X_Rate_Factor__c) , 
 Opportunity__r.Payment_Amount__c/Opportunity__r.Equipment_Cost__c)
) *  IF(ISNULL(List_Price__c), 0 , List_Price__c) * 
IF(ISNULL(Opportunity__r.of_Payments__c), 0 , Opportunity__r.of_Payments__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Rental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>