peac_dev/force-app/main/default/objects/Asset__c/fields/Rental_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>Rental_Amount_Override__c</fullName>
    <label>Rental Amount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>