peac_dev/force-app/main/default/objects/Asset__c/fields/Residual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Residual_Amount__c</fullName>
    <label>Residual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>