peac_dev/force-app/main/default/objects/Asset__c/fields/Residual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Residual_Percentage__c</fullName>
    <label>Residual Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>