peac_dev/force-app/main/default/objects/Asset__c/fields/RPT_ASSET_AS_KEY__c.field-meta.xml
<CustomField>
    <fullName>RPT_ASSET_AS_KEY__c</fullName>
    <description>This Field has been created to  avoid inserting dupilicate asset record ( RPT_ASSET.AS_KEY)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RPT_ASSET_AS_KEY</label>
    <length>60</length>
    <type>Text</type>
</CustomField>