peac_dev/force-app/main/default/objects/Asset__c/fields/Sales_Profit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Profit__c</fullName>
    <label>Sales Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>