peac_dev/force-app/main/default/objects/Asset__c/fields/Salvage_Value__c.field-meta.xml
<CustomField>
    <fullName>Salvage_Value__c</fullName>
    <label>Salvage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>