peac_dev/force-app/main/default/objects/Asset__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>