peac_dev/force-app/main/default/objects/Asset__c/fields/Sleeper_Day_Cab__c.field-meta.xml
<CustomField>
    <fullName>Sleeper_Day_Cab__c</fullName>
    <label>Sleeper</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>