peac_dev/force-app/main/default/objects/Asset__c/fields/Sleeper_Day_Cab_Class__c.field-meta.xml
<CustomField>
    <fullName>Sleeper_Day_Cab_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sleeper/Day Cab Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>