peac_dev/force-app/main/default/objects/Asset__c/fields/Sleeper_Daycab__c.field-meta.xml
<CustomField>
    <fullName>Sleeper_Daycab__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sleeper/Day Cab Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>