peac_dev/force-app/main/default/objects/Asset__c/fields/State_Begin_Depreciation_Date__c.field-meta.xml
<CustomField>
    <fullName>State_Begin_Depreciation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State - Begin Depreciation Date</label>
    <type>Date</type>
</CustomField>