peac_dev/force-app/main/default/objects/Asset__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>State Code Returned from Vertex</inlineHelpText>
    <label>State Location Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>