peac_dev/force-app/main/default/objects/Asset__c/fields/State_Life_in_Months__c.field-meta.xml
<CustomField>
    <fullName>State_Life_in_Months__c</fullName>
    <label>State Life in Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>